# entropic_case

./: README.md  pyproject.toml
data/: filtered_projects.csv  ispt_processed.csv  ispt_projects.csv
entropic_case/: data_preprocessing.ipynb  scraper.py  summarizer.ipynb
